fix(restore): add text file restore logic using patch/diff
- Implement restorePlainTextFileFromSnapshotAndDiffs for txt and other plain text files
- Ensure restoreFileToVersion automatically chooses the correct restore logic based on file type
- Now supports correct restoration of both OOXML (docx, xlsx, pptx) and text files
- Improves reliability and compatibility of file version restoration